--- a/donar.html
+++ b/donar.html
@@ -12,122 +12,125 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
+    <!--Modificocion de estilos bootstrap-->
+    <link rel="stylesheet" href="bootstrap.css" />
+    <!--link del css-->
     <link rel="stylesheet" href="style.css" />
     <title>DONACIÓN</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img class="logo" src="img/icono4.jpg" alt="Icon" />
-          </a>
-          <button
-            class="navbar-toggler navbar-button"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse navbar-style" id="navbarNav">
-            <ul class="navbar-nav nav-list">
-              <li class="nav-item">
-                <a
-                  class="nav-link nav-text"
-                  aria-current="page"
-                  href="index.html"
-                  >Inicio</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="adoptar.html">Adoptar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="donar.html">Donar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="mascotas-perdidas.html"
-                  >Mascotas Perdidas</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+    <div class="root">
+      <div class="banner">
+        <header>
+          <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">
+                <img class="logo" src="img/icono4.jpg" alt="Icon" />
+              </a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="index.html"
+                      >Inicio</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="adoptar.html">Adoptar</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="donar.html">Donar</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="mascotas-perdidas.html"
+                      >Mascotas Perdidas</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </header>
+        <div class="introduction">
+          <h1 class="introduction__title">DONACIÓN</h1>
         </div>
-      </nav>
-      <div class="textos">
-        <h1 class="texto">DONACIÓN</h1>
       </div>
-    </header>
-    <main class="contenido">
-      <section class="datos-donacion">
-        <form class="formulario-donar" action="">
-          <div class="nombres">
-            <label for="nombre-apellido">Nombre y Apellido:</label>
-            <input
-              class="datos-formulario-donar"
-              type="text"
-              placeholder="Nombre y Apellido"
-            />
+      <main class="main">
+        <p class="main__text">
+          Al donar nos estás ayudando a darles comodidad, comida,ropita,algunos
+          juguetes y los mas importante ayudas al tratamiento de algunas
+          mascotas que llegan heridas y sin sus vacunas.Muchas gracias por
+          apoyarnos.
+        </p>
+        <section class="donate-form">
+          <form class="donate-form__data" action="">
+            <div>
+              <label for="nombre-apellido">Nombre y Apellido:</label>
+              <input
+                class="input-donation"
+                type="text"
+                placeholder="Nombre y Apellido"
+              />
+            </div>
+            <div>
+              <label for="correo">Correo:</label>
+              <input
+                class="input-donation"
+                type="email"
+                placeholder="Correo"
+              />
+            </div>
+            <div>
+              <label for="telefono">Teléfono:</label>
+              <input
+                class="input-donation"
+                type="number"
+                placeholder="Teléfono"
+              />
+            </div>
+            <div>
+              <label for="tarjeta">N° de tarjeta:</label>
+              <input
+                class="input-donation"
+                type="number"
+                placeholder="Tarjeta"
+              />
+            </div>
+            <div class="donate-form__data__item">
+              <label for="cantidad">S/.</label>
+              <input
+                class="input-donation"
+                type="number"
+                placeholder="Cantidad"
+              />
+            </div>
+          </form>
+          <div class="button">
+            <button class="button__text">Enviar</button>
           </div>
-          <div class="correo">
-            <label for="correo">Correo:</label>
-            <input
-              class="datos-formulario-donar"
-              type="email"
-              placeholder="Correo"
-            />
-          </div>
-          <div class="telefono">
-            <label for="telefono">Teléfono:</label>
-            <input
-              class="datos-formulario-donar"
-              type="number"
-              placeholder="Teléfono"
-            />
-          </div>
-          <div class="tarjeta-donar">
-            <label for="tarjeta">N° de tarjeta:</label>
-            <input
-              class="datos-formulario-donar"
-              type="number"
-              placeholder="Tarjeta"
-            />
-          </div>
-          <div class="cantidad">
-            <label for="cantidad">S/.</label>
-            <input
-              class="datos-formulario-donar"
-              type="number"
-              placeholder="Cantidad"
-            />
-        </form>
-      </div>
-      <div class="boton-main">
-        <button class="boton">Enviar</button>
-      </div>
-      </section>
-      <p class="texto-main">
-        Al donar nos estás ayudando a darles comodidad, comida,ropita,algunos
-        juguetes y los mas importante ayudas al tratamiento de algunas mascotas
-        que llegan heridas y sin sus vacunas.Muchas gracias por apoyarnos.
-      </p>
-    </main>
-    <footer>
-      <div class="footer">
-        <div class="logo">
+        </section>
+      </main>
+      <footer class="footer">
+        <div>
           <a href="index.html"
             ><img class="logo" src="img/icono4.jpg" alt="Es un logo."
           /></a>
         </div>
-        <div class="ubicacion">
-          <p class="texto-footer">Ubicanos en:</p>
+        <div class="footer__location">
+          <p class="footer-text">Ubicanos en:</p>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31206.90996320073!2d-77.04629307031205!3d-12.121473891679223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8199ea33425%3A0xbfe3626e9c3a156a!2sMiraflores!5e0!3m2!1ses-419!2spe!4v1661733252771!5m2!1ses-419!2spe"
             width="600"
@@ -138,12 +141,12 @@
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
-        <div class="redes">
-          <p class="texto-footer">Nuestras Redes:</p>
-          <ul class="lista-redes">
+        <div class="footer-networks">
+          <p class="footer-text">Nuestras Redes:</p>
+          <ul class="footer-networks__list">
             <li>
               <a
-                class="logo-redes"
+                class="network"
                 href="https://www.instagram.com/"
                 target="_blank"
                 ><img src="img/instagram.png" alt="Instagram"
@@ -151,24 +154,21 @@
             </li>
             <li>
               <a
-                class="logo-redes"
+                class="network"
                 href="https://www.facebook.com/"
                 target="_blank"
                 ><img src="img/facebook.png" alt="Facebook"
               /></a>
             </li>
             <li>
-              <a
-                class="logo-redes"
-                href="https://www.twitter.com/"
-                target="_blank"
+              <a class="network" href="https://www.twitter.com/" target="_blank"
                 ><img src="img/twitter.png" alt="Twitter"
               /></a>
             </li>
           </ul>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
   <!--link bootstrap js-->
   <script
