--- a/index.html
+++ b/index.html
@@ -12,127 +12,130 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
+    <!--Modificocion de estilos bootstrap-->
+    <link rel="stylesheet" href="bootstrap.css" />
+    <!--link css-->
     <link rel="stylesheet" href="style.css" />
     <!--Link libreria AOS-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>Adopt me</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img class="logo" src="img/icono4.jpg" alt="Icon" />
-          </a>
-          <button
-            class="navbar-toggler navbar-button"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse navbar-style" id="navbarNav">
-            <ul class="navbar-nav nav-list">
-              <li class="nav-item">
-                <a
-                  class="nav-link nav-text"
-                  aria-current="page"
-                  href="index.html"
-                  >Inicio</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="adoptar.html">Adoptar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="donar.html">Donar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="mascotas-perdidas.html"
-                  >Mascotas Perdidas</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+    <div class="root">
+      <div class="banner">
+        <header>
+          <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">
+                <img class="logo" src="img/icono4.jpg" alt="Icon" />
+              </a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="index.html"
+                      >Inicio</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="adoptar.html">Adoptar</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="donar.html">Donar</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="mascotas-perdidas.html"
+                      >Mascotas Perdidas</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </header>
+        <div class="introduction">
+          <h1 class="introduction__title">ADOPT ME</h1>
+          <p>
+            Somos una organización sin fines de lucro , nuestra meta es brindar
+            ayuda y darles hogar a los animales de la calle. En esta página
+            podrás adoptar a tu nueva mascota y también podrás ayudar a
+            encontrar alguna mascota que lamentablemente se haya perdido.
+          </p>
         </div>
-      </nav>
-      <div class="textos">
-        <h1 class="texto">ADOPT ME</h1>
-        <p>
-          Somos una organización sin fines de lucro , nuestra meta es brindar
-          ayuda y darles hogar a los animales de la calle. En esta página podrás
-          adoptar a tu nueva mascota y también podrás ayudar a encontrar alguna
-          mascota que lamentablemente se haya perdido.
-        </p>
       </div>
-    </header>
-    <main class="contenido">
-      <h3 class="texto-main">
-        Experiencias de personas que <br />
-        adoptaron por primera vez.
-      </h3>
-      <article class="caso1">
-        <img
-          class="imagenes-main"
-          data-aos="fade-up"
-          data-aos-delay="100"
-          data-aos-duration="1000"
-          src="img/experiencia1.jpg"
-          alt="Un perro con su dueño."
-        />
 
-        <p class="parrafos-inicio">
-          El haber adoptado a Braco fue muy bonito es un perro muy inteligente y
-          divertido , me alegra mucho haberlo adoptado aquel dia.
-        </p>
-      </article>
-      <article class="caso2">
-        <img
-          class="imagenes-main"
-          data-aos="fade-up"
-          data-aos-delay="100"
-          data-aos-duration="1000"
-          src="img/experiencia2.jpg"
-          alt="Un perro con su dueño."
-        />
-        <p class="parrafos-inicio">
-          Adoptamos a Bernardo ya que a mi hijo le gusto mucho , se encariño
-          rápido con el y en la casa están todo el dia jugando , son
-          inseparables.
-        </p>
-      </article>
-      <article class="caso3">
-        <img
-          class="imagenes-main"
-          data-aos="fade-up"
-          data-aos-delay="100"
-          data-aos-duration="1000"
-          src="img/experiencia3.jpg"
-          alt="Un perro con su dueño."
-        />
-        <p class="parrafos-inicio">
-          Mi pareja y yo sentíamos que nos hacia falta una mascota y decidimos
-          adoptar , quedamos fascinados con Layca asi que la adoptamos y ahora
-          es como una hija para nosotros.
-        </p>
-      </article>
-    </main>
-    <footer>
-      <div class="footer">
+      <main class="main">
+        <h3 class="main__title">
+          Experiencias de personas que <br />
+          adoptaron por primera vez.
+        </h3>
+        <article class="experience-card">
+          <img
+            class="experience-card__img"
+            data-aos="fade-up"
+            data-aos-delay="100"
+            data-aos-duration="1000"
+            src="img/experiencia1.jpg"
+            alt="Un perro con su dueño."
+          />
+
+          <p class="experience-card__text">
+            El haber adoptado a Braco fue muy bonito es un perro muy inteligente
+            y divertido , me alegra mucho haberlo adoptado aquel dia.
+          </p>
+        </article>
+        <article class="experience-card experience-card--reverse">
+          <img
+            class="experience-card__img"
+            data-aos="fade-up"
+            data-aos-delay="100"
+            data-aos-duration="1000"
+            src="img/experiencia2.jpg"
+            alt="Un perro con su dueño."
+          />
+          <p class="experience-card__text">
+            Adoptamos a Bernardo ya que a mi hijo le gusto mucho , se encariño
+            rápido con el y en la casa están todo el dia jugando , son
+            inseparables.
+          </p>
+        </article>
+        <article class="experience-card">
+          <img
+            class="experience-card__img"
+            data-aos="fade-up"
+            data-aos-delay="100"
+            data-aos-duration="1000"
+            src="img/experiencia3.jpg"
+            alt="Un perro con su dueño."
+          />
+          <p class="experience-card__text">
+            Mi pareja y yo sentíamos que nos hacia falta una mascota y decidimos
+            adoptar , quedamos fascinados con Layca asi que la adoptamos y ahora
+            es como una hija para nosotros.
+          </p>
+        </article>
+      </main>
+      <footer class="footer">
         <div>
           <a href="index.html"
             ><img class="logo" src="img/icono4.jpg" alt="Es un logo."
           /></a>
         </div>
-        <div class="ubicacion">
-          <p class="texto-footer">Ubicanos en:</p>
+        <div class="footer__location">
+          <p class="footer-text">Ubicanos en:</p>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31206.90996320073!2d-77.04629307031205!3d-12.121473891679223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8199ea33425%3A0xbfe3626e9c3a156a!2sMiraflores!5e0!3m2!1ses-419!2spe!4v1661733252771!5m2!1ses-419!2spe"
             width="600"
@@ -143,12 +146,12 @@
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
-        <div class="redes">
-          <p class="texto-footer">Nuestras Redes:</p>
-          <ul class="lista-redes">
+        <div class="footer-networks">
+          <p class="footer-text">Nuestras Redes:</p>
+          <ul class="footer-networks__list">
             <li>
               <a
-                class="logo-redes"
+                class="network"
                 href="https://www.instagram.com/"
                 target="_blank"
                 ><img src="img/instagram.png" alt="Instagram"
@@ -156,24 +159,21 @@
             </li>
             <li>
               <a
-                class="logo-redes"
+                class="network"
                 href="https://www.facebook.com/"
                 target="_blank"
                 ><img src="img/facebook.png" alt="Facebook"
               /></a>
             </li>
             <li>
-              <a
-                class="logo-redes"
-                href="https://www.twitter.com/"
-                target="_blank"
+              <a class="network" href="https://www.twitter.com/" target="_blank"
                 ><img src="img/twitter.png" alt="Twitter"
               /></a>
             </li>
           </ul>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
