--- a/mascotas-perdidas.html
+++ b/mascotas-perdidas.html
@@ -12,226 +12,244 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
+    <!--Modificocion de estilos bootstrap-->
+    <link rel="stylesheet" href="bootstrap.css" />
+    <!--link del css-->
     <link rel="stylesheet" href="style.css" />
     <!--Link libreria AOS-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>MASCOTAS PERDIDAS</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img class="logo" src="img/icono4.jpg" alt="Icon" />
-          </a>
-          <button
-            class="navbar-toggler navbar-button"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse navbar-style" id="navbarNav">
-            <ul class="navbar-nav nav-list">
-              <li class="nav-item">
-                <a
-                  class="nav-link nav-text"
-                  aria-current="page"
-                  href="index.html"
-                  >Inicio</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="adoptar.html">Adoptar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="donar.html">Donar</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="mascotas-perdidas.html"
-                  >Mascotas Perdidas</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-text" href="contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+    <div class="root">
+      <div class="banner">
+        <header>
+          <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">
+                <img class="logo" src="img/icono4.jpg" alt="Icon" />
+              </a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="index.html"
+                      >Inicio</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="adoptar.html">Adoptar</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="donar.html">Donar</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="mascotas-perdidas.html"
+                      >Mascotas Perdidas</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </header>
+        <div class="introduction">
+          <h1 class="introduction__title">MASCOTAS PERDIDAS</h1>
         </div>
-      </nav>
-      <div class="textos">
-        <h1 class="texto">MASCOTAS PERDIDAS</h1>
       </div>
-    </header>
-    <main class="contenido">
-      <p class="texto-main">
-        En esta parte encontrarás a las mascotas que se nos han reportado como
-        perdidas,si viste alguno no dudes en comunicarte con nostotros llenando
-        el siguiente formulario.Ayudanos a que vuelvan a su hogar.
-      </p>
-      <section class="mascotas">
-        <div class="lista-mascotas-perdidas">
-          <div class="tarjeta"
-          data-aos="fade-up"
-          data-aos-delay="100"
-          data-aos-duration="1000">
-            <img
-              class="tarjeta-img"
-              src="img/mascota-perdida1.jpg"
-              alt="Imagen de un perro"
-            />
-            <div class="tarjeta-info">
-              <h5 class="tarjeta-info-nombre">Doky</h5>
-              <p class="tarjeta-info-descripcion">
-                Doky es un perrito muy jugueton, puede ser engreido en algunas
-                ocasiones,pero es muy divertido.
-              </p>
-              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
+      <main class="main">
+        <p class="main__text">
+          En esta parte encontrarás a las mascotas que se nos han reportado como
+          perdidas,si viste alguno no dudes en comunicarte con nostotros
+          llenando el siguiente formulario.Ayudanos a que vuelvan a su hogar.
+        </p>
+        <section class="pets-cards">
+          <div class="lost-pets-cards">
+            <div
+              class="pet-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              <img
+                class="pet-card__img"
+                src="img/mascota-perdida1.jpg"
+                alt="Imagen de un perro"
+              />
+              <div class="card-information">
+                <h5 class="card-information__name">Doky</h5>
+                <p class="card-information__description">
+                  Doky es un perrito muy jugueton, puede ser engreido en algunas
+                  ocasiones,pero es muy divertido.
+                </p>
+                <a href="contacto.html" class="pet-card__button">LO VI</a>
+              </div>
+            </div>
+            <div
+              class="pet-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              <img
+                class="pet-card__img"
+                src="img/mascota-perdida2.jpg"
+                alt="Imagen de un perro"
+              />
+              <div class="card-information">
+                <h5 class="card-information__name">Doris</h5>
+                <p class="card-information__description">
+                  Doris es una perrita muy juguetona, puede ser engreida en
+                  algunas ocasiones,pero es muy divertida.
+                </p>
+                <a href="contacto.html" class="pet-card__button">LA VI</a>
+              </div>
+            </div>
+            <div
+              class="pet-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              <img
+                class="pet-card__img"
+                src="img/mascota-perdida3.jpg"
+                alt="Imagen de un perro"
+              />
+              <div class="card-information">
+                <h5 class="card-information__name">Daril</h5>
+                <p class="card-information__description">
+                  Daril es un perrito muy jugueton, puede ser engreido en
+                  algunas ocasiones,pero es muy divertido.
+                </p>
+                <a href="contacto.html" class="pet-card__button">LO VI</a>
+              </div>
+            </div>
+            <div
+              class="pet-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              <img
+                class="pet-card__img"
+                src="img/mascota-perdida4.jpg"
+                alt="Imagen de un perro"
+              />
+              <div class="card-information">
+                <h5 class="card-information__name">Roco</h5>
+                <p class="card-information__description">
+                  Roco es un perrito muy jugueton, puede ser engreido en algunas
+                  ocasiones,pero es muy divertido.
+                </p>
+                <a href="contacto.html" class="pet-card__button">LO VI</a>
+              </div>
+            </div>
+            <div
+              class="pet-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              <img
+                class="pet-card__img"
+                src="img/mascota-perdida5.jpg"
+                alt="Imagen de un perro"
+              />
+              <div class="card-information">
+                <h5 class="card-information__name">Mate</h5>
+                <p class="card-information__description">
+                  Mate es un perrito muy jugueton, puede ser engreido en algunas
+                  ocasiones,pero es muy divertido.
+                </p>
+                <a href="contacto.html" class="pet-card__button">LO VI</a>
+              </div>
+            </div>
+
+            <div
+              class="pet-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              <img
+                class="pet-card__img"
+                src="img/mascota-perdida6.jpg"
+                alt="Imagen de un perro"
+              />
+              <div class="card-information">
+                <h5 class="card-information__name">Layca</h5>
+                <p class="card-information__description">
+                  Layca es una perrita muy juguetona, puede ser engreida en
+                  algunas ocasiones,pero es muy divertida.
+                </p>
+                <a href="contacto.html" class="pet-card__button">LA VI</a>
+              </div>
+            </div>
+            <div
+              class="pet-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              <img
+                class="pet-card__img"
+                src="img/mascota-perdida7.jpg"
+                alt="Imagen de un perro"
+              />
+              <div class="card-information">
+                <h5 class="card-information__name">Simba</h5>
+                <p class="card-information__description">
+                  Simba es un perrito muy jugueton, puede ser engreido en
+                  algunas ocasiones,pero es muy divertido.
+                </p>
+                <a href="contacto.html" class="pet-card__button">LO VI</a>
+              </div>
+            </div>
+            <div
+              class="pet-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+              data-aos-duration="1000"
+            >
+              <img
+                class="pet-card__img"
+                src="img/mascota-perdida8.jpg"
+                alt="Imagen de un perro"
+              />
+              <div class="card-information">
+                <h5 class="card-information__name">Zeus</h5>
+                <p class="card-information__description">
+                  Zeus es un perrito muy jugueton, puede ser engreido en algunas
+                  ocasiones,pero es muy divertido.
+                </p>
+                <a href="contacto.html" class="pet-card__button">LO VI</a>
+              </div>
             </div>
           </div>
-          <div class="tarjeta"
-          data-aos="fade-up"
-          data-aos-delay="100"
-          data-aos-duration="1000">
-            <img
-              class="tarjeta-img"
-              src="img/mascota-perdida2.jpg"
-              alt="Imagen de un perro"
-            />
-            <div class="tarjeta-info">
-              <h5 class="tarjeta-info-nombre">Doris</h5>
-              <p class="tarjeta-info-descripcion">
-                Doris es una perrita muy juguetona, puede ser engreida en algunas
-                ocasiones,pero es muy divertida.
-              </p>
-              <a href="contacto.html" class="tarjeta-boton">LA VI</a>
-            </div>
-          </div>
-          <div class="tarjeta"
-          data-aos="fade-up"
-          data-aos-delay="100"
-          data-aos-duration="1000">
-            <img
-              class="tarjeta-img"
-              src="img/mascota-perdida3.jpg"
-              alt="Imagen de un perro"
-            />
-            <div class="tarjeta-info">
-              <h5 class="tarjeta-info-nombre">Daril</h5>
-              <p class="tarjeta-info-descripcion">
-                Daril es un perrito muy jugueton, puede ser engreido en algunas
-                ocasiones,pero es muy divertido.
-              </p>
-              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
-            </div>
-          </div>
-          <div class="tarjeta"
-          data-aos="fade-up"
-          data-aos-delay="100"
-          data-aos-duration="1000">
-            <img
-              class="tarjeta-img"
-              src="img/mascota-perdida4.jpg"
-              alt="Imagen de un perro"
-            />
-            <div class="tarjeta-info">
-              <h5 class="tarjeta-info-nombre">Roco</h5>
-              <p class="tarjeta-info-descripcion">
-                Roco es un perrito muy jugueton, puede ser engreido en algunas
-                ocasiones,pero es muy divertido.
-              </p>
-              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
-            </div>
-          </div>
-          <div class="tarjeta"
-          data-aos="fade-up"
-          data-aos-delay="100"
-          data-aos-duration="1000">
-            <img
-              class="tarjeta-img"
-              src="img/mascota-perdida5.jpg"
-              alt="Imagen de un perro"
-            />
-            <div class="tarjeta-info">
-              <h5 class="tarjeta-info-nombre">Mate</h5>
-              <p class="tarjeta-info-descripcion">
-                Mate es un perrito muy jugueton, puede ser engreido en algunas
-                ocasiones,pero es muy divertido.
-              </p>
-              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
-            </div>
-          </div>
-          
-          <div class="tarjeta"
-          data-aos="fade-up"
-          data-aos-delay="100"
-          data-aos-duration="1000">
-            <img
-              class="tarjeta-img"
-              src="img/mascota-perdida6.jpg"
-              alt="Imagen de un perro"
-            />
-            <div class="tarjeta-info">
-              <h5 class="tarjeta-info-nombre">Layca</h5>
-              <p class="tarjeta-info-descripcion">
-                Layca es una perrita muy juguetona, puede ser engreida en algunas
-                ocasiones,pero es muy divertida.
-              </p>
-              <a href="contacto.html" class="tarjeta-boton">LA VI</a>
-            </div>
-          </div>
-          <div class="tarjeta"
-          data-aos="fade-up"
-          data-aos-delay="100"
-          data-aos-duration="1000">
-            <img
-              class="tarjeta-img"
-              src="img/mascota-perdida7.jpg"
-              alt="Imagen de un perro"
-            />
-            <div class="tarjeta-info">
-              <h5 class="tarjeta-info-nombre">Simba</h5>
-              <p class="tarjeta-info-descripcion">
-                Simba es un perrito muy jugueton, puede ser engreido en algunas
-                ocasiones,pero es muy divertido.
-              </p>
-              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
-            </div>
-          </div>
-          <div class="tarjeta"
-          data-aos="fade-up"
-          data-aos-delay="100"
-          data-aos-duration="1000">
-            <img
-              class="tarjeta-img"
-              src="img/mascota-perdida8.jpg"
-              alt="Imagen de un perro"
-            />
-            <div class="tarjeta-info">
-              <h5 class="tarjeta-info-nombre">Zeus</h5>
-              <p class="tarjeta-info-descripcion">
-                Zeus es un perrito muy jugueton, puede ser engreido en algunas
-                ocasiones,pero es muy divertido.
-              </p>
-              <a href="contacto.html" class="tarjeta-boton">LO VI</a>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <div class="footer">
-        <div class="logo">
+        </section>
+      </main>
+      <footer class="footer">
+        <div>
           <a href="index.html"
             ><img class="logo" src="img/icono4.jpg" alt="Es un logo."
           /></a>
         </div>
-        <div class="ubicacion">
-          <p class="texto-footer">Ubicanos en:</p>
+        <div class="footer__location">
+          <p class="footer-text">Ubicanos en:</p>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31206.90996320073!2d-77.04629307031205!3d-12.121473891679223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8199ea33425%3A0xbfe3626e9c3a156a!2sMiraflores!5e0!3m2!1ses-419!2spe!4v1661733252771!5m2!1ses-419!2spe"
             width="600"
@@ -242,12 +260,12 @@
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
-        <div class="redes">
-          <p class="texto-footer">Nuestras Redes:</p>
-          <ul class="lista-redes">
+        <div class="footer-networks">
+          <p class="footer-text">Nuestras Redes:</p>
+          <ul class="footer-networks__list">
             <li>
               <a
-                class="logo-redes"
+                class="network"
                 href="https://www.instagram.com/"
                 target="_blank"
                 ><img src="img/instagram.png" alt="Instagram"
@@ -255,24 +273,21 @@
             </li>
             <li>
               <a
-                class="logo-redes"
+                class="network"
                 href="https://www.facebook.com/"
                 target="_blank"
                 ><img src="img/facebook.png" alt="Facebook"
               /></a>
             </li>
             <li>
-              <a
-                class="logo-redes"
-                href="https://www.twitter.com/"
-                target="_blank"
+              <a class="network" href="https://www.twitter.com/" target="_blank"
                 ><img src="img/twitter.png" alt="Twitter"
               /></a>
             </li>
           </ul>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
   <!--link bootstrap js-->
   <script
