Mejorando la version mobile

--- a/adoptar.html
+++ b/adoptar.html
@@ -264,39 +264,31 @@
           <br />
 
           <section class="filter">
-            <div class="filter__title">
-              <h4>Filtro</h4>
+            <div>
+              <h4 class="filter__title">Filtro</h4>
             </div>
             <div class="filter__data">
-              <form action="">
-                <p>clases:</p>
+              <form  class="filter-form" action="">
                 <div>
+                  <p class="filter-form__text">Clases:</p>
                   <input type="checkbox" />
-                  <label for="perros">Perros</label>
-                </div>
-                <div>
+                  <label for="perros">Perros</label> <br>
                   <input type="checkbox" />
                   <label for="gatos">Gatos</label>
                 </div>
-                <p>Sexo:</p>
                 <div>
+                  <p class="filter-form__text">Sexo:</p>
                   <input type="checkbox" />
-                  <label for="hembra">hembra</label>
-                </div>
-                <div>
+                  <label for="hembra">hembra</label> <br>
                   <input type="checkbox" />
                   <label for="macho">Macho</label>
                 </div>
-                <p>Tamaño:</p>
                 <div>
+                  <p class="filter-form__text">Tamaño:</p>
                   <input type="checkbox" />
-                  <label for="pequeños">Pequeños</label>
-                </div>
-                <div>
+                  <label for="pequeños">Pequeños</label><br>
                   <input type="checkbox" />
-                  <label for="medianos">Medianos</label>
-                </div>
-                <div>
+                  <label for="medianos">Medianos</label> <br>
                   <input type="checkbox" />
                   <label for="grandes">Grandes</label>
                 </div>
