--- a/mascotas-perdidas.html
+++ b/mascotas-perdidas.html
@@ -48,7 +48,7 @@
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="adoptar.html">Adoptar</a>
+                    <a class="nav-link" href="adoptar.html">Adoptar</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="donar.html">Donar</a>
@@ -73,8 +73,8 @@
       <main class="main">
         <p class="main__text">
           En esta parte encontrarás a las mascotas que se nos han reportado como
-          perdidas,si viste alguno no dudes en comunicarte con nostotros
-          llenando el siguiente formulario.Ayudanos a que vuelvan a su hogar.
+          perdidas ,si viste alguno no dudes en comunicarte con nostotros
+          llenando el siguiente formulario. Ayudanos a que vuelvan a su hogar.
         </p>
         <section class="pets-cards">
           <div class="lost-pets-cards">
