--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="img/icono4.jpg" type="image/x-icon" />
+    <meta
+      name="description"
+      content="Somos una organización que quiere llegar a todas las mascotas de la calle y brindarles un hogar mediante la adopción  responsable a familias que buscan un mejor amigo para su hogar."
+    />
+    <meta property="og:type" content="Web site" />
+    <meta
+      property="og:title"
+      content="Adopt Me | Adopta un mejor amigo para tu hogar"
+    />
+    <meta
+      property="og:url"
+      content="https://github.com/Fenix-Quiroz/PreEntrega2-FenixQuiroz/settings/pages"
+    />
+    <meta property="image" content="" />
+    <meta
+      name="keywords"
+      content="Adopción , adoptar, mascotas, perros , gatos , animales , mascotas perdidas, mejor amigo , caninos, felinos, familia, hogar, cachorros"
+    />
+    <link rel="shortcut icon" href="img/icono4.ico" type="image/x-icon" />
     <!-- link Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -12,11 +30,11 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-    <!--Modificocion de estilos bootstrap-->
-    <link rel="stylesheet" href="bootstrap.css" />
     <!--lin del css-->
-    <link rel="stylesheet" href="style.css" />
-    <title>CONTACTO</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>
+      CONTACTO | Contactanos si quieres adoptar o reportar una mascota.
+    </title>
   </head>
   <body>
     <div class="root">
@@ -25,7 +43,7 @@
           <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">
-                <img class="logo" src="img/icono4.jpg" alt="Icon" />
+                <img class="logo" src="img/logo.jpg" alt="Logo de la página." />
               </a>
               <button
                 class="navbar-toggler"
@@ -74,7 +92,7 @@
           ingresa tus datos para poder comunicarnos contigo.
         </p>
         <section class="contact-form">
-          <formaction="">
+          <forma action="">
             <div>
               <input
                 class="input-contact"
@@ -86,7 +104,11 @@
               <input class="input-contact" type="email" placeholder="Correo" />
             </div>
             <div>
-              <input class="input-contact" type="number" placeholder="Teléfono" />
+              <input
+                class="input-contact"
+                type="number"
+                placeholder="Teléfono"
+              />
             </div>
             <div>
               <input class="input-contact" type="text" placeholder="Asunto" />
@@ -104,19 +126,20 @@
             <div class="button">
               <button class="button__text">Enviar</button>
             </div>
-          </formaction=>
+          </forma>
         </section>
       </main>
       <footer class="footer">
         <div>
           <a href="index.html"
-            ><img class="logo" src="img/icono4.jpg" alt="Es un logo."
+            ><img class="logo" src="img/logo.jpg" alt="Logo de la página."
           /></a>
         </div>
         <div class="footer__location">
           <p class="footer-text">Ubicanos en:</p>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31206.90996320073!2d-77.04629307031205!3d-12.121473891679223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8199ea33425%3A0xbfe3626e9c3a156a!2sMiraflores!5e0!3m2!1ses-419!2spe!4v1661733252771!5m2!1ses-419!2spe"
+            title="Ubicación de nuestra direccion para poder adoptar"
             width="600"
             height="450"
             style="border: 0"
@@ -133,7 +156,7 @@
                 class="network"
                 href="https://www.instagram.com/"
                 target="_blank"
-                ><img src="img/instagram.png" alt="Instagram"
+                ><img src="img/instagram.png" alt="Red social Instagram"
               /></a>
             </li>
             <li>
@@ -141,12 +164,12 @@
                 class="network"
                 href="https://www.facebook.com/"
                 target="_blank"
-                ><img src="img/facebook.png" alt="Facebook"
+                ><img src="img/facebook.png" alt="Red social Facebook"
               /></a>
             </li>
             <li>
               <a class="network" href="https://www.twitter.com/" target="_blank"
-                ><img src="img/twitter.png" alt="Twitter"
+                ><img src="img/twitter.png" alt="Red social Twitter"
               /></a>
             </li>
           </ul>
