--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,10 @@
       property="og:url"
       content="https://github.com/Fenix-Quiroz/PreEntrega2-FenixQuiroz/settings/pages"
     />
-    <meta property="image" content="" />
+    <meta
+      property="image"
+      content="https://fenix-quiroz.github.io/PreEntrega2-FenixQuiroz/img/logo.jpg"
+    />
     <meta
       name="keywords"
       content="Adopción , adoptar, mascotas, perros , gatos , animales , mascotas perdidas, mejor amigo , caninos, felinos, familia, hogar, cachorros"
