--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       content="Adopt Me | Adopta un mejor amigo para tu hogar"
     />
     <meta
-      property="og:url"
-      content="https://github.com/Fenix-Quiroz/PreEntrega2-FenixQuiroz/settings/pages"
-    />
-    <meta
-      property="image"
-      content="https://fenix-quiroz.github.io/PreEntrega2-FenixQuiroz/img/logo.jpg"
-    />
+    property="og:url"
+    content="https://adoptarayudar.000webhostapp.com"
+  />
+  <meta
+    property="image"
+    content="https://adoptarayudar.000webhostapp.com/img/logo.jpg"
+  />
     <meta
       name="keywords"
       content="Adopción , adoptar, mascotas, perros , gatos , animales , mascotas perdidas, mejor amigo , caninos, felinos, familia, hogar, cachorros"
@@ -110,7 +110,9 @@
             src="img/experiencia1.jpg"
             alt="Un perro con su dueño."
           />
-
+          <div class="experience-card__flecha">
+            <img src="img/flecha.png" alt="Flecha">
+          </div>
           <p class="experience-card__text">
             El haber adoptado a Braco fue muy bonito es un perro muy inteligente
             y divertido , me alegra mucho haberlo adoptado aquel dia.
@@ -125,6 +127,9 @@
             src="img/experiencia2.jpg"
             alt="Un perro con su dueño."
           />
+          <div class="experience-card__flecha--reverse">
+            <img class="" src="img/flecha.png" alt="Flecha">
+          </div>
           <p class="experience-card__text">
             Adoptamos a Bernardo ya que a mi hijo le gusto mucho , se encariño
             rápido con el y en la casa están todo el dia jugando , son
@@ -140,6 +145,9 @@
             src="img/experiencia3.jpg"
             alt="Un perro con su dueño."
           />
+          <div class="experience-card__flecha">
+            <img class="" src="img/flecha.png" alt="Flecha">
+          </div>
           <p class="experience-card__text">
             Mi pareja y yo sentíamos que nos hacia falta una mascota y decidimos
             adoptar , quedamos fascinados con Layca asi que la adoptamos y ahora
