--- a/mascotas-perdidas.html
+++ b/mascotas-perdidas.html
@@ -15,11 +15,11 @@
     />
     <meta
       property="og:url"
-      content="https://github.com/Fenix-Quiroz/PreEntrega2-FenixQuiroz/settings/pages"
+      content="https://adoptarayudar.000webhostapp.com"
     />
     <meta
       property="image"
-      content="https://fenix-quiroz.github.io/PreEntrega2-FenixQuiroz/img/logo.jpg"
+      content="https://adoptarayudar.000webhostapp.com/img/logo.jpg"
     />
     <meta
       name="keywords"
