--- a/adoptar.html
+++ b/adoptar.html
@@ -13,10 +13,7 @@
       property="og:title"
       content="Adopt Me | Adopta un mejor amigo para tu hogar"
     />
-    <meta
-      property="og:url"
-      content="https://adoptarayudar.000webhostapp.com"
-    />
+    <meta property="og:url" content="https://adoptarayudar.000webhostapp.com" />
     <meta
       property="image"
       content="https://adoptarayudar.000webhostapp.com/img/logo.jpg"
@@ -41,63 +38,55 @@
   </head>
   <body>
     <div class="root">
-      <div class="banner">
-        <header>
-          <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">
-                <img class="logo" src="img/logo.jpg" alt="Logo de la página." />
-              </a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html"
-                      >Inicio</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="adoptar.html">Adoptar</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="donar.html">Donar</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="mascotas-perdidas.html"
-                      >Mascotas Perdidas</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
+      <header>
+        <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+              <img class="logo" src="img/logo.jpg" alt="Logo de la página." />
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="index.html"
+                    >Inicio</a
+                  >
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="adoptar.html">Adoptar</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="donar.html">Donar</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="mascotas-perdidas.html"
+                    >Mascotas Perdidas</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contacto.html">Contacto</a>
+                </li>
+              </ul>
             </div>
-          </nav>
-        </header>
-        <div class="introduction">
-          <h1 class="introduction__title">Adopta a tu nuevo mejor amigo.</h1>
-        </div>
-      </div>
-
-      <main class="main">
-        <p class="main__text">
-          Adoptar una mascota es darle un hogar y felicidad después de estar
-          perdidos y tristes. <br />
-          <span class="lema">¡NO COMPRES UNO DE RAZA,ADOPTA UNO SIN CASA!</span>
+          </div>
+        </nav>
+      </header>
+      <main class="main-adoption">
+        <p class="main-adoption__text">
+          ¡Adopta a tu nuevo mejor amigo!
         </p>
 
-        <div class="main__adoption">
+        <div class="pets-cards">
           <section class="pets-cards__adoption">
             <div
               class="pet-card"
@@ -283,34 +272,39 @@
           <br />
           <div class="section-filter">
             <section class="filter">
-              <div>
-                <h4 class="filter__title">Filtro</h4>
-              </div>
+              <h4 class="filter__title">Filtros</h4>
               <div class="filter__data">
                 <form class="filter-form" action="">
                   <div>
-                    <p class="filter-form__text">Clases:</p>
-                    <input type="checkbox" />
-                    <label for="perros">Perros</label> <br />
-                    <input type="checkbox" />
-                    <label for="gatos">Gatos</label>
+                    <p class="filter-form__text">Clase:</p>
+                    <div class="filter-form__items">
+                      <input type="checkbox" />
+                      <label class="filter-form__item" for="perros">Perros</label> <br />
+                      <input type="checkbox" />
+                      <label class="filter-form__item" for="gatos">Gatos</label>
+                    </div>
                   </div>
                   <div>
                     <p class="filter-form__text">Sexo:</p>
-                    <input type="checkbox" />
-                    <label for="hembra">hembra</label> <br />
-                    <input type="checkbox" />
-                    <label for="macho">Macho</label>
+                    <div class="filter-form__items">
+                      <input type="checkbox" />
+                      <label class="filter-form__item" for="hembra">Hembra</label> <br />
+                      <input type="checkbox" />
+                      <label class="filter-form__item" for="macho">Macho</label>
+                    </div>
                   </div>
                   <div>
                     <p class="filter-form__text">Tamaño:</p>
-                    <input type="checkbox" />
-                    <label for="pequeños">Pequeños</label><br />
-                    <input type="checkbox" />
-                    <label for="medianos">Medianos</label> <br />
-                    <input type="checkbox" />
-                    <label for="grandes">Grandes</label>
+                    <div class="filter-form__items">
+                      <input type="checkbox" />
+                      <label class="filter-form__item" for="pequeños">Pequeños</label><br />
+                      <input type="checkbox" />
+                      <label class="filter-form__item" for="medianos">Medianos</label> <br />
+                      <input type="checkbox" />
+                      <label class="filter-form__item" for="grandes">Grandes</label>
+                    </div>
                   </div>
+                  <button class="filter__button">FILTRAR</button>
                 </form>
               </div>
             </section>
@@ -318,49 +312,48 @@
         </div>
       </main>
       <footer class="footer">
-        <div>
-          <a href="index.html"
-            ><img class="logo" src="img/logo.jpg" alt="Logo de la página."
-          /></a>
-        </div>
-        <div class="footer__location">
-          <p class="footer-text">Ubicanos en:</p>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31206.90996320073!2d-77.04629307031205!3d-12.121473891679223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8199ea33425%3A0xbfe3626e9c3a156a!2sMiraflores!5e0!3m2!1ses-419!2spe!4v1661733252771!5m2!1ses-419!2spe"
-            title="Ubicación de nuestra direccion para poder adoptar"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-        <div class="footer-networks">
-          <p class="footer-text">Nuestras Redes:</p>
-          <ul class="footer-networks__list">
-            <li>
-              <a
-                class="network"
-                href="https://www.instagram.com/"
-                target="_blank"
-                ><img src="img/instagram.png" alt="Red social Instagram"
-              /></a>
-            </li>
-            <li>
-              <a
-                class="network"
-                href="https://www.facebook.com/"
-                target="_blank"
-                ><img src="img/facebook.png" alt="Red Social Facebook"
-              /></a>
-            </li>
-            <li>
-              <a class="network" href="https://www.twitter.com/" target="_blank"
-                ><img src="img/twitter.png" alt="Red social Twitter"
-              /></a>
-            </li>
-          </ul>
+        <p class="footer__title">Ubicanos en:</p>
+        <div class="footer__banner">
+          <div class="footer__location">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31206.90996320073!2d-77.04629307031205!3d-12.121473891679223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8199ea33425%3A0xbfe3626e9c3a156a!2sMiraflores!5e0!3m2!1ses-419!2spe!4v1661733252771!5m2!1ses-419!2spe"
+              title="Ubicación de nuestra direccion para poder adoptar"
+              width="1000"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <div class="footer__networks">
+            <ul class="footer__networks-list">
+              <li>
+                <a
+                  class="network"
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  ><img src="img/instagram.png" alt="Red social Instagram"
+                /></a>
+              </li>
+              <li>
+                <a
+                  class="network"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  ><img src="img/facebook.png" alt=" Red social Facebook"
+                /></a>
+              </li>
+              <li>
+                <a
+                  class="network"
+                  href="https://www.twitter.com/"
+                  target="_blank"
+                  ><img src="img/twitter.png" alt="Red social Twitter"
+                /></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
