--- a/contacto.html
+++ b/contacto.html
@@ -13,10 +13,7 @@
       property="og:title"
       content="Adopt Me | Adopta un mejor amigo para tu hogar"
     />
-    <meta
-      property="og:url"
-      content="https://adoptarayudar.000webhostapp.com"
-    />
+    <meta property="og:url" content="https://adoptarayudar.000webhostapp.com" />
     <meta
       property="image"
       content="https://adoptarayudar.000webhostapp.com/img/logo.jpg"
@@ -41,141 +38,130 @@
   </head>
   <body>
     <div class="root">
-      <div class="banner">
-        <header>
-          <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">
-                <img class="logo" src="img/logo.jpg" alt="Logo de la página." />
-              </a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html"
-                      >Inicio</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="adoptar.html">Adoptar</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="donar.html">Donar</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="mascotas-perdidas.html"
-                      >Mascotas Perdidas</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
+      <header>
+        <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+              <img class="logo" src="img/logo.jpg" alt="Logo de la página." />
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="index.html"
+                    >Inicio</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="adoptar.html">Adoptar</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="donar.html">Donar</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="mascotas-perdidas.html"
+                    >Mascotas Perdidas</a
+                  >
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="contacto.html">Contacto</a>
+                </li>
+              </ul>
             </div>
-          </nav>
-        </header>
-        <div class="introduction">
-          <h1 class="introduction__title">CONTÁCTENOS</h1>
+          </div>
+        </nav>
+      </header>
+      <main class="main-contacto">
+        <p class="main-contacto__title">contáctanos</p>
+        <div class="main-contacto__container">
+          <img src="img/donar.png" alt="Imagne de perrito animado." />
+          <p class="main-contacto__text">
+            Si quieres adoptar,viste alguna mascota perdida o quieres reportar
+            una ingresa tus datos para poder comunicarnos contigo.
+          </p>
         </div>
-      </div>
-      <main class="main">
-        <p class="main__text">
-          Si quieres adoptar,viste alguna mascota perdida o quieres reportar una
-          ingresa tus datos para poder comunicarnos contigo.
-        </p>
-        <section class="contact-form">
-          <forma action="">
-            <div>
-              <input
-                class="input-contact"
-                type="text"
-                placeholder="Nombre y Apellido"
-              />
+
+        <form
+          class="contact-form"
+          action="/serve/"
+          method="post"
+          enctype="application/x-www-form-urlencoded"
+        >
+          <div class="contact-form__data">
+            <div class="contact-form__item">
+              <label for="name" id="name" name="name">Nombre</label>
+              <input type="text" name="name" id="name" />
             </div>
-            <div>
-              <input class="input-contact" type="email" placeholder="Correo" />
-            </div>
-            <div>
-              <input
-                class="input-contact"
-                type="number"
-                placeholder="Teléfono"
-              />
-            </div>
-            <div>
-              <input class="input-contact" type="text" placeholder="Asunto" />
-            </div>
-            <div>
-              <textarea
-                class="input-contact"
-                name="mensaje"
-                id="mensaje"
-                cols="30"
-                rows="10"
-                placeholder="Mensaje"
-              ></textarea>
-            </div>
-            <div class="button">
-              <button class="button__text">Enviar</button>
-            </div>
-          </forma>
-        </section>
+          <div class="contact-form__item">
+            <label for="email" id="email" name="email">Correo</label>
+            <input type="email" name="email" id="email" />
+          </div>
+          <div class="contact-form--item">
+            <label for="message" id="message" name="message">Mensaje</label>
+            <textarea
+              name="message"
+              id="message"
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+        </div>
+          <button class="contact-form__button" type="reset">Enviar</button>
+        </form>
       </main>
       <footer class="footer">
-        <div>
-          <a href="index.html"
-            ><img class="logo" src="img/logo.jpg" alt="Logo de la página."
-          /></a>
-        </div>
-        <div class="footer__location">
-          <p class="footer-text">Ubicanos en:</p>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31206.90996320073!2d-77.04629307031205!3d-12.121473891679223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8199ea33425%3A0xbfe3626e9c3a156a!2sMiraflores!5e0!3m2!1ses-419!2spe!4v1661733252771!5m2!1ses-419!2spe"
-            title="Ubicación de nuestra direccion para poder adoptar"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-        <div class="footer-networks">
-          <p class="footer-text">Nuestras Redes:</p>
-          <ul class="footer-networks__list">
-            <li>
-              <a
-                class="network"
-                href="https://www.instagram.com/"
-                target="_blank"
-                ><img src="img/instagram.png" alt="Red social Instagram"
-              /></a>
-            </li>
-            <li>
-              <a
-                class="network"
-                href="https://www.facebook.com/"
-                target="_blank"
-                ><img src="img/facebook.png" alt="Red social Facebook"
-              /></a>
-            </li>
-            <li>
-              <a class="network" href="https://www.twitter.com/" target="_blank"
-                ><img src="img/twitter.png" alt="Red social Twitter"
-              /></a>
-            </li>
-          </ul>
+        <p class="footer__title">Ubicanos en:</p>
+        <div class="footer__banner">
+          <div class="footer__location">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31206.90996320073!2d-77.04629307031205!3d-12.121473891679223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8199ea33425%3A0xbfe3626e9c3a156a!2sMiraflores!5e0!3m2!1ses-419!2spe!4v1661733252771!5m2!1ses-419!2spe"
+              title="Ubicación de nuestra direccion para poder adoptar"
+              width="1000"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <div class="footer__networks">
+            <ul class="footer__networks-list">
+              <li>
+                <a
+                  class="network"
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  ><img src="img/instagram.png" alt="Red social Instagram"
+                /></a>
+              </li>
+              <li>
+                <a
+                  class="network"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  ><img src="img/facebook.png" alt=" Red social Facebook"
+                /></a>
+              </li>
+              <li>
+                <a
+                  class="network"
+                  href="https://www.twitter.com/"
+                  target="_blank"
+                  ><img src="img/twitter.png" alt="Red social Twitter"
+                /></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
