--- a/donar.html
+++ b/donar.html
@@ -13,10 +13,7 @@
       property="og:title"
       content="Adopt Me | Adopta un mejor amigo para tu hogar"
     />
-    <meta
-      property="og:url"
-      content="https://adoptarayudar.000webhostapp.com"
-    />
+    <meta property="og:url" content="https://adoptarayudar.000webhostapp.com" />
     <meta
       property="image"
       content="https://adoptarayudar.000webhostapp.com/img/logo.jpg"
@@ -41,149 +38,180 @@
   </head>
   <body>
     <div class="root">
-      <div class="banner">
-        <header>
-          <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">
-                <img class="logo" src="img/logo.jpg" alt="Logo de la página." />
-              </a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html"
-                      >Inicio</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="adoptar.html">Adoptar</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="donar.html">Donar</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="mascotas-perdidas.html"
-                      >Mascotas Perdidas</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
+      <header>
+        <nav class="navbar navbar-expand-lg bg-transparent navbar-white">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+              <img class="logo" src="img/logo.jpg" alt="Logo de la página." />
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="index.html"
+                    >Inicio</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="adoptar.html">Adoptar</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" href="donar.html">Donar</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="mascotas-perdidas.html"
+                    >Mascotas Perdidas</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contacto.html">Contacto</a>
+                </li>
+              </ul>
             </div>
-          </nav>
-        </header>
-        <div class="introduction">
-          <h1 class="introduction__title">DONACIÓN</h1>
+          </div>
+        </nav>
+      </header>
+      <main class="main-donar">
+        <p class="main-donar__title">Dona y ayudanos</p>
+        <div class="main-donar__description">
+          <img
+            class="main-donar__img"
+            src="img/donar.jpg"
+            alt="Imagen de perrito pidiendo donaciones."
+          />
+          <p class="main-donar__text">
+            Al donar nos estás ayudando a darles comodidad, comida, ropita,
+            algunos juguetes y los mas importante ayudas al tratamiento de
+            algunas mascotas que llegan heridas y sin sus vacunas. Muchas
+            gracias por apoyarnos.
+          </p>
         </div>
-      </div>
-      <main class="main">
-        <p class="main__text">
-          Al donar nos estás ayudando a darles comodidad, comida, ropita,
-          algunos juguetes y los mas importante ayudas al tratamiento de algunas
-          mascotas que llegan heridas y sin sus vacunas. Muchas gracias por
-          apoyarnos.
-        </p>
         <section class="donate-form">
-          <form class="donate-form__data" action="">
-            <div>
-              <label for="nombre-apellido">Nombre y Apellido:</label>
-              <input
-                class="input-donation"
-                type="text"
-                placeholder="Nombre y Apellido"
-              />
-            </div>
-            <div>
-              <label for="correo">Correo:</label>
-              <input class="input-donation" type="email" placeholder="Correo" />
-            </div>
-            <div>
-              <label for="telefono">Teléfono:</label>
-              <input
-                class="input-donation"
-                type="number"
-                placeholder="Teléfono"
-              />
-            </div>
-            <div>
-              <label for="tarjeta">N° de tarjeta:</label>
-              <input
-                class="input-donation"
-                type="number"
-                placeholder="Tarjeta"
-              />
-            </div>
-            <div class="donate-form__data__item">
-              <label for="cantidad">S/.</label>
-              <input
-                class="input-donation"
-                type="number"
-                placeholder="Cantidad"
-              />
+          <div class="donate-form__card">
+            <img
+              class="donate-form__img"
+              src="img/card2.jpg"
+              alt="Imagen de una tarjeta de credito"
+            />
+          </div>
+          <form
+            autocomplete="off"
+            action="/server/"
+            method="post"
+            enctype="application/x-www-form-urlencoded"
+            class="form-donar"
+          >
+            <div class="form-donar__datas">
+              <div class="form-donar__data">
+                <label for="cardNumber" id="cardNumber" name="cardNumber"
+                  >Número de tarjeta:
+                </label>
+                <input type="number" name="cardNumber" id="cardNumber" />
+              </div>
+              <div class="form-donar__data">
+                <label for="cardHolder" id="cardHolder" name="cardHolder"
+                  >Titular de la tarjeta:</label
+                >
+                <input type="text" name="cardHolder" id="cardHolder" />
+              </div>
+              <div class="form-donar__items">
+                <div class="form-donar__data">
+                  <label
+                    for="expirationData"
+                    id="expirationData"
+                    name="expirationData"
+                    >Fecha de expiración</label
+                  >
+                  <div class="form-donar__selects">
+                    <select name="months" id="months">
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                      <option value="6">6</option>
+                      <option value="7">7</option>
+                      <option value="8">8</option>
+                      <option value="9">9</option>
+                      <option value="10">10</option>
+                      <option value="11">11</option>
+                      <option value="12">12</option>
+                    </select>
+                    <select name="years" id="years">
+                      <option value="2022">2022</option>
+                      <option value="2023">2023</option>
+                      <option value="2024">2024</option>
+                      <option value="2025">2025</option>
+                      <option value="2026">2026</option>
+                      <option value="2027">2027</option>
+                      <option value="2028">2028</option>
+                    </select>
+                  </div>
+                </div>
+
+                <div class="form-donar__data">
+                  <label for="ccv" id="ccv">ccv</label>
+                  <input type="number" name="ccv" id="ccv" />
+                </div>
+              </div>
+              <button class="form-donar__button" type="reset">Donar</button>
             </div>
           </form>
-          <div class="button">
-            <button class="button__text">Enviar</button>
-          </div>
         </section>
       </main>
       <footer class="footer">
-        <div>
-          <a href="index.html"
-            ><img class="logo" src="img/logo.jpg" alt="Logo de la página."
-          /></a>
-        </div>
-        <div class="footer__location">
-          <p class="footer-text">Ubicanos en:</p>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31206.90996320073!2d-77.04629307031205!3d-12.121473891679223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8199ea33425%3A0xbfe3626e9c3a156a!2sMiraflores!5e0!3m2!1ses-419!2spe!4v1661733252771!5m2!1ses-419!2spe"
-            title="Ubicación de nuestra direccion para poder adoptar"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-        <div class="footer-networks">
-          <p class="footer-text">Nuestras Redes:</p>
-          <ul class="footer-networks__list">
-            <li>
-              <a
-                class="network"
-                href="https://www.instagram.com/"
-                target="_blank"
-                ><img src="img/instagram.png" alt="Red social Instagram"
-              /></a>
-            </li>
-            <li>
-              <a
-                class="network"
-                href="https://www.facebook.com/"
-                target="_blank"
-                ><img src="img/facebook.png" alt="Red social Facebook"
-              /></a>
-            </li>
-            <li>
-              <a class="network" href="https://www.twitter.com/" target="_blank"
-                ><img src="img/twitter.png" alt="Red social Twitter"
-              /></a>
-            </li>
-          </ul>
+        <p class="footer__title">Ubicanos en:</p>
+        <div class="footer__banner">
+          <div class="footer__location">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31206.90996320073!2d-77.04629307031205!3d-12.121473891679223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8199ea33425%3A0xbfe3626e9c3a156a!2sMiraflores!5e0!3m2!1ses-419!2spe!4v1661733252771!5m2!1ses-419!2spe"
+              title="Ubicación de nuestra direccion para poder adoptar"
+              width="1000"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+          <div class="footer__networks">
+            <ul class="footer__networks-list">
+              <li>
+                <a
+                  class="network"
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  ><img src="img/instagram.png" alt="Red social Instagram"
+                /></a>
+              </li>
+              <li>
+                <a
+                  class="network"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  ><img src="img/facebook.png" alt=" Red social Facebook"
+                /></a>
+              </li>
+              <li>
+                <a
+                  class="network"
+                  href="https://www.twitter.com/"
+                  target="_blank"
+                  ><img src="img/twitter.png" alt="Red social Twitter"
+                /></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
